fix scrollbar

--- a/src/styles/module/module.less
+++ b/src/styles/module/module.less
@@ -372,3 +372,9 @@
     content: "\f0ad";
   }
 }
+
+/////Scroll/////
+
+.scrollbar-inner > .scroll-element, .scrollbar-inner > .scroll-element div{
+  z-index: 8 !important;
+}
